<resources>

    <string name="app_name">Smart Home</string>

    <!-- ==== TAB TITLES ====================================================== -->
    <string name="title_environment_fragment">Environment</string>
    <string name="title_security_fragment">Security</string>
    <string name="title_stock_fragment">Stock</string>
    <string name="title_schedule_fragment">Schedule</string>
    <string name="title_settings_fragment">Settings</string>
    <!-- ====================================================================== -->


    <!-- ==== BUTTONS ========================================================= -->
    <!-- ENVIRONMENT -->
    <string name="button_view_graph">Open Chart</string>
    <string name="button_from_date">From Date</string>
    <string name="button_to_date">To Date</string>

    <!-- SECURITY -->
    <string name="button_open_camera_feed">Open Camera Feed</string>
    <string name="button_return_from_camera">Return</string>
    <string name="button_open_intrusion_list">Reported Intrusions</string>
    <string name="button_intrusion_view_all">View All</string>
    <string name="button_intrusion_remove_all">Remove All</string>
    <string name="button_return_to_intrusion_list">Return to Intrusion List</string>

    <!-- STOCK -->
    <string name="button_calibrate_scale_text">Calibrate</string>
    <!-- ====================================================================== -->


    <!-- ==== TEXT VIEWS ====================================================== -->
    <!-- ENVIRONMENT -->
    <string name="text_temperature_display_celsius">%1$.2f °C</string>
    <string name="text_temperature_display_fahrenheit">%1$.2f °F</string>
    <string name="text_humidity_display">Humidity: %1$.2f%%</string>

    <string name="text_from_date">From: %1$s</string>
    <string name="text_to_date">To: %1$s</string>

    <string name="text_heating_last_on">Last On: %1$s @ %2$s</string>
    <string name="text_heating_duration">For: %1$s</string>

    <string name="text_environment_heating_label">Heating</string>
    <string name="text_switch_heating_on">On</string>
    <string name="text_switch_heating_off">Off</string>

    <!-- SECURITY -->
    <string name="text_camera_feed_header">Security Feed</string>
    <string name="text_security_alarm_label">Security Alarm</string>
    <string name="text_switch_alarm_armed">Armed</string>
    <string name="text_switch_alarm_disarmed">Disarmed</string>
    <string name="text_label_alarm_scheduled">Scheduled for: %1$s</string>
    <string name="text_label_alarm_armed">Last Armed: %1$s</string>

    <string name="text_label_intrusion_viewed_seen">Seen</string>
    <string name="text_label_intrusion_viewed_unseen">Unseen</string>

    <string name="text_title_intrusion_list">List of Intrusions</string>
    <string name="text_title_intrusion_view">Intrusion</string>

    <string name="text_label_intrusion_date">Date Taken: %1$s</string>
    <string name="text_label_intrusion_time">Time Taken: %1$s</string>

    <string name="text_no_intrusions_found">No Intrusions Found</string>

    <!-- STOCK -->
    <string name="text_label_stock_product">Product</string>
    <string name="text_label_stock_weight">Weight</string>
    <string name="text_stock_weight_g">%1$d / %2$d g</string>
    <string name="text_stock_weight_oz">%1$.2f / %2$.2f oz</string>

    <string name="text_stock_display_weight">%1$d g</string>

    <string name="text_scale_calibrate_weight_g">%1$d g</string>
    <string name="text_scale_calibrate_weight_oz">%1$d oz</string>

    <string name="text_scale_instructions_header">Instructions</string>
    <string name="text_scale_instructions">Place a new product on the scale. Once the weight has settled, assign the product a name and click the calibrate button</string>
    <string name="text_error_scale_disconnected">Scale Disconnected</string>
    <!-- ====================================================================== -->


    <!-- ==== CHART TEXT ====================================================== -->
    <string name="text_env_stat_warmest">Warmest Value:</string>
    <string name="text_env_stat_coldest">Coldest Value:</string>
    <string name="text_env_stat_warmest_date">Warmest Date:</string>
    <string name="text_env_stat_coldest_date">Coldest Date:</string>

    <string name="text_stock_stat_finished">Est. Finished:</string>
    <string name="text_stock_stat_most">Most Consumed:</string>
    <string name="text_stock_stat_least">Least Consumed:</string>
    <string name="text_stock_stat_most_date">Most Date:</string>
    <string name="text_stock_stat_least_date">Least Date:</string>
    <!-- ====================================================================== -->


    <!-- ==== PREFERENCES ===================================================== -->
    <!-- METRICS -->
    <string name="pref_category_metrics">Metrics</string>

    <string name="pref_title_metrics_temperature">Temperature</string>
    <string name="pref_desc_metrics_temperature">Choose which measurement the temperature values display in.</string>
    <string-array name="pref_metrics_temperature_options">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="pref_metrics_temperature_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_metrics_weight">Weight</string>
    <string name="pref_desc_metrics_weight">Choose which measurement the weight values display in.</string>
    <string-array name="pref_metrics_weight_options">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_metrics_weight_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- CONNECTION -->
    <string name="pref_category_connection">Connection</string>

    <string name="pref_title_connection_frequency">Frequency</string>
    <string name="pref_desc_connection_frequency">How frequently values are requested from the cloud.</string>
    <string-array name="pref_connection_frequency_options">
        <item>Every Half Second</item>
        <item>Every Second</item>
        <item>Every Two Seconds</item>
        <item>Every Five Seconds</item>
    </string-array>
    <string-array name="pref_connection_frequency_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <!-- NOTIFICATION -->
    <string name="pref_category_notification">Notification</string>

    <string name="pref_title_notification_push">Push Notifications</string>
    <string name="pref_desc_notification_push">Allow this app to send push notifications.</string>
    <!-- ====================================================================== -->


    <!-- ==== TOAST =========================================================== -->
    <string name="toast_no_readings_found">No data found for those dates</string>
    <string name="toast_invalid_date_range">Invalid date range</string>
    <string name="toast_unable_to_open_camera">Unable to open camera feed</string>

    <string name="toast_unable_to_arm_alarm">Unable to arm the alarm</string>
    <string name="toast_no_intrusion_selected">No intrusion selected</string>

    <string name="toast_view_intrusion_failure">Unable to mark intrusion as viewed</string>
    <string name="toast_view_intrusion_success">Marked intrusion as viewed</string>

    <string name="toast_remove_intrusion_failure">Unable to remove intrusion</string>
    <string name="toast_remove_intrusion_success">Removed intrusion from list</string>
    <!-- ====================================================================== -->


    <!-- ==== CONTENT DESCRIPTIONS ============================================ -->
    <string name="desc_img_intrusion_preview">Preview of intrusion image screen shot</string>
    <string name="desc_img_btn_intrusion_remove">Removes the selected intrusion</string>
    <string name="desc_img_btn_intrusion_view">Views the selected intrusion</string>
    <string name="desc_img_intrusion_picture">Picture captured during the intrusion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- ====================================================================== -->

</resources>
