<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.sheehan.smarthome.fragment.SecurityFragment">

    <LinearLayout
        android:id="@+id/container"
        android:orientation="horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_security_alarm_label"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/switch_alarm"
            android:textOn="@string/text_switch_alarm_armed"
            android:textOff="@string/text_switch_alarm_disarmed"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/label_alarm_scheduled"
        android:text="@string/text_label_alarm_scheduled"
        android:layout_below="@id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_alarm_last_armed"
        android:text="@string/text_label_alarm_armed"
        android:layout_below="@id/label_alarm_scheduled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_open_camera_feed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/button_open_camera_feed"
        android:onClick="openCameraActivity" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_open_camera_feed"
        android:onClick="openIntrusionActivity"
        android:text="@string/button_open_intrusion_list"/>

</RelativeLayout>
