<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="ie.sheehan.smarthome.fragment.EnvironmentFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_temperature"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_humidity"
        android:textSize="24sp"
        android:layout_below="@+id/text_temperature"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/container"
        android:orientation="horizontal"
        android:layout_below="@id/text_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/text_environment_heating_label"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ToggleButton
            android:id="@+id/switch_heating"
            android:textOn="@string/text_switch_heating_on"
            android:textOff="@string/text_switch_heating_off"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_label_heating_last_on"
        android:layout_below="@id/container"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/text_label_heating_duration"
        android:layout_below="@id/text_label_heating_last_on"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin" />

    <Button
        android:text="@string/button_view_graph"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/button_view_graph"
        android:onClick="openGraphActivity" />

    <LinearLayout
        android:id="@+id/linear_layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/button_view_graph">

        <Button
            android:id="@+id/button_set_from_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_from_date"
            android:onClick="showFromDatePickerDialog"/>

        <Button
            android:id="@+id/button_set_to_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_to_date"
            android:onClick="showToDatePickerDialog"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/linear_layout_button">

        <TextView
            android:id="@+id/text_from_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_from_date"
            android:gravity="center" />

        <TextView
            android:id="@+id/text_to_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_to_date"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>
