<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="ie.sheehan.smarthome.IntrusionViewActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/text_title_intrusion_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <ImageView
        android:id="@+id/image_intrusion"
        android:contentDescription="@string/desc_img_intrusion_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/text_label_intrusion_date"
        android:text="@string/text_label_intrusion_date"
        android:layout_below="@id/image_intrusion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
