<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="ie.sheehan.smarthome.activity.IntrusionListActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:title="@string/text_title_intrusion_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_intrusion_view_all"
            android:text="@string/button_intrusion_view_all"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="markAllAsViewed" />

        <Button
            android:id="@+id/button_intrusion_remove_all"
            android:text="@string/button_intrusion_remove_all"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="removeAll" />

    </LinearLayout>

    <ListView
        android:id="@+id/list_intrusions"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/colorAccent"
        android:dividerHeight="1dp" />

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_label_no_intrusions"
        android:text="@string/text_no_intrusions_found"
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
