<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.sheehan.smarthome.fragment.StockFragment">

    <LinearLayout
        android:id="@+id/container"
        android:orientation="horizontal"
        android:baselineAligned="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_vertical_margin">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_product_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_stock_product"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/label_product"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_product_header"
                android:textSize="24sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/label_weight_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_stock_weight"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/label_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_weight_header"
                android:textSize="24sp" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:text="@string/button_calibrate_scale_text"
        android:onClick="openScaleCalibrationActivity"
        android:layout_below="@id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinner_products"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:spinnerMode="dropdown"/>

        <Button
            android:id="@+id/button_view_product_chart"
            android:text="@string/button_view_graph"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/gui_cover"
        android:visibility="invisible"
        android:background="#FFFFFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/text_error_scale_disconnected"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</RelativeLayout>
