<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <ImageView
        android:id="@+id/image_intrusion_preview"
        android:contentDescription="@string/desc_img_intrusion_preview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/label_intrusion_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/image_intrusion_preview"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/label_intrusion_time"
        android:layout_below="@id/label_intrusion_date"
        android:layout_toEndOf="@id/image_intrusion_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/label_intrusion_seen"
        android:layout_below="@id/label_intrusion_time"
        android:layout_toEndOf="@id/image_intrusion_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageButton
        android:id="@+id/img_button_remove_intrusion"
        android:src="@drawable/ic_remove_intrusion"
        android:contentDescription="@string/desc_img_btn_intrusion_remove"
        android:background="@null"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_width="40dp"
        android:layout_height="40dp" />

    <ImageButton
        android:id="@+id/img_button_view_intrusion"
        android:src="@drawable/ic_view_intrusion"
        android:contentDescription="@string/desc_img_btn_intrusion_view"
        android:background="@null"
        android:layout_centerVertical="true"
        android:layout_toStartOf="@id/img_button_remove_intrusion"
        android:layout_width="40dp"
        android:layout_height="40dp" />

</RelativeLayout>